--- a/src/app/componentes/cadastro/cadastro.component.html
+++ b/src/app/componentes/cadastro/cadastro.component.html
@@ -1,7 +1,7 @@
 <!-- cadastro.component.html -->
 <div class="login-page-wrapper">
   <div class="login-container">
-    <!-- Seção Visual (Oculta em telas menores) -->
+    <!-- Seção Visual (igual à tela de login) -->
     <div class="visual-side">
       <div class="abstract-graphic"></div>
       <div class="visual-content">
