--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="balance-car">
     <div class="balance-container">
       <h2>Bem-vindo, {{ user?.nome?.split(' ')[0] || 'Cliente' }}</h2>
-      <div class="balance-amount">{{ user?.saldo | currency:'BRL':'symbol':'1.2-2' || 'R$ 0,00' }}</div>
+      <div class="balance-amount">{{ user?.saldo | currency:'BRL':'symbol':'1.2-2' }}</div>
     </div>
   </div>
 
@@ -14,7 +14,7 @@
     <div class="status-grid">
       <div class="status-item">
         <span class="status-label">Saldo Disponível</span>
-        <span class="status-value positive">{{ user?.saldo | currency:'BRL':'symbol':'1.2-2' || 'R$ 0,00' }}</span>
+        <span class="status-value positive">{{ user?.saldo | currency:'BRL':'symbol':'1.2-2' }}</span>
       </div>
       <div class="status-item">
         <span class="status-label">Limite Disponível</span>
