--- a/src/app/componentes/transacoes/transacoes.component.css
+++ b/src/app/componentes/transacoes/transacoes.component.css
@@ -166,7 +166,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: var(--color-primary);
+    background: linear-gradient(135deg, var(--color-primary) 0%, #111827 100%);
   display: flex;
   justify-content: space-around;
   padding: 12px 0;
