--- a/src/app/componentes/cadastro/cadastro.component.css
+++ b/src/app/componentes/cadastro/cadastro.component.css
@@ -187,7 +187,7 @@
             align-items: flex-start; /* Alinha o texto com o topo do checkbox */
             margin-top: 25px;
             font-size: 0.9em;
-            color: #ccc;
+            color: black;
             line-height: 1.4;
         }
 
@@ -271,7 +271,6 @@
 .lgpd-consent {
   margin: 20px 0;
   padding: 15px;
-  background-color: #f5f5f5;
   border-radius: 8px;
 }
 
