--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -30,35 +30,37 @@
       <div class="card-number">{{ formatarNumeroCartao(user?.cartao?.numero) }}</div>
       <div class="card-details">
         <div class="card-name">{{ user?.cartao?.nome || 'SEU NOME' }}</div>
-        <div class="card-expiry">Validade: {{ user?.cartao?.validade || 'MM/AA' }}</div>r
+        <div class="card-expiry">Validade: {{ user?.cartao?.validade || 'MM/AA' }}</div>
       </div>
     </div>
   </div>
   
   <div class="card novidades-carousel">
     <h3>Novidades em breve</h3>
-    <div class="carousel">
-      <div class="carousel-item active">
-        <img src="assets/novidades/cartao-virtual.png" alt="Cartão virtual" class="carousel-image">
-        <div class="carousel-caption">
-          <h4>Cartão virtual</h4>
-          <p>Em breve você poderá gerar um cartão virtual para compras online com mais segurança.</p>
+    <div class="carousel-container">
+      <button class="carousel-control prev" (click)="prevSlide()">
+        &lt;
+      </button>
+      <div class="carousel">
+        <div *ngFor="let slide of slides; let i = index" 
+             class="carousel-item" 
+             [class.active]="i === currentSlide">
+          <img [src]="slide.image" [alt]="slide.title" class="carousel-image">
+          <div class="carousel-caption">
+            <h4>{{ slide.title }}</h4>
+            <p>{{ slide.description }}</p>
+          </div>
+        </div>
+        <div class="carousel-dots">
+          <div *ngFor="let slide of slides; let i = index" 
+               class="carousel-dot" 
+               [class.active]="i === currentSlide"
+               (click)="goToSlide(i)"></div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="assets/novidades/investimentos.png" alt="Investimentos" class="carousel-image">
-        <div class="carousel-caption">
-          <h4>Investimentos</h4>
-          <p>Planeje seu futuro investindo direto pelo NovaBank de forma simples e rápida.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/novidades/recompensas.png" alt="Recompensas" class="carousel-image">
-        <div class="carousel-caption">
-          <h4>Programa de recompensas</h4>
-          <p>Ganhe pontos a cada compra e troque por benefícios exclusivos.</p>
-        </div>
-      </div>
+      <button class="carousel-control next" (click)="nextSlide()">
+        &gt;
+      </button>
     </div>
   </div>
   
